projects/compiler/test/typechecker/decorators/error_trait_impl_invalid_type.out
Error at %TEST_DIR%/typechecker/decorators/error_trait_impl_invalid_type.abra:5:18
Invalid item in trait implementations list
  |  decorator Bar1 : Foo1 {}
                      ^
Expected the name of a trait, but instead found 'Foo1' (which is a type)

Error at %TEST_DIR%/typechecker/decorators/error_trait_impl_invalid_type.abra:6:18
Invalid item in trait implementations list
  |  decorator Bar2 : Foo2 {}
                      ^
Expected the name of a trait, but instead found 'Foo2' (which is an enum)

Error at %TEST_DIR%/typechecker/decorators/error_trait_impl_invalid_type.abra:7:18
Invalid item in trait implementations list
  |  decorator Bar3 : Foo3 {}
                      ^
Expected the name of a trait, but instead found 'Foo3' (which is a decorator)

Error at %TEST_DIR%/typechecker/decorators/error_trait_impl_invalid_type.abra:9:20
Invalid item in trait implementations list
  |  decorator BarAll : Foo1, Foo2, Foo3 {}
                        ^
Expected the name of a trait, but instead found 'Foo1' (which is a type)

Error at %TEST_DIR%/typechecker/decorators/error_trait_impl_invalid_type.abra:9:26
Invalid item in trait implementations list
  |  decorator BarAll : Foo1, Foo2, Foo3 {}
                              ^
Expected the name of a trait, but instead found 'Foo2' (which is an enum)

Error at %TEST_DIR%/typechecker/decorators/error_trait_impl_invalid_type.abra:9:32
Invalid item in trait implementations list
  |  decorator BarAll : Foo1, Foo2, Foo3 {}
                                    ^
Expected the name of a trait, but instead found 'Foo3' (which is a decorator)
